<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">*backlog</string>

    <string name="icon">アイコン</string>
    <string name="dummy_time">2013–01–01 12:34:56</string>
    <string name="dummy_key">PRJ1234</string>
    <string name="dummy_summary">Project of 1234</string>
    <string name="dummy_user">Dummy</string>
    <string name="dummy_content">それは、それは、いろんなことがあったのだよ。だからこんなに長いコメントになっているんだ。</string>

    <string name="key_issue_id">KEY_ISSUE_ID</string>
    <string name="key_issue_key">KEY_ISSUE_KEY</string>
    <string name="key_issue_summary">KEY_ISSUE_SUMMARY</string>
    <string name="key_no_ad">KEY_NO_AD</string>

    <string name="sku_no_ad">no_ad</string>

    <string name="save">保存</string>
    <string name="send">送信</string>

    <string name="reload">更新</string>
    <string name="post">投稿</string>

    <string name="loading">読込中…</string>
    <string name="cant_load">読み込めませんでした。</string>

    <string name="sending">送信中</string>
    <string name="cant_send">失敗しました。</string>
    <string name="done_send">送信しました。</string>

    <string name="follow_user">が、課題を</string>

    <string name="created">作成</string>
    <string name="type">種別</string>
    <string name="priority">優先度</string>
    <string name="components">カテゴリ</string>
    <string name="status">状態</string>
    <string name="assigner">担当者</string>

    <string name="hint_comment">コメントをここに書き込んで、保存ボタンをタップ</string>

    <string name="dummy_type">タスク</string>
    <string name="dummy_priority">中</string>
    <string name="dummy_components">なし</string>
    <string name="dummy_status">処理中</string>
    <string name="dummy_assigner">だれか</string>

    <string name="billing_no_ad">広告の除去</string>
    <string name="billing_service_unavailable">この端末ではアプリ内課金が使えません。</string>

</resources>
