<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_issue"
        >

    <!-- 日時 -->
    <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"
            android:text="@string/dummy_time"
            android:textSize="8pt"
            android:textColor="@color/gray"
            />

    <!-- 課題の内容 -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <!-- アイコン -->
        <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dummy"
                android:contentDescription="@string/icon"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/created"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_user"
                            android:textSize="8pt"
                            />
                </TableRow>
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_type"
                            android:textSize="8pt"
                            />
                </TableRow>
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/priority"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_priority"
                            android:textSize="8pt"
                            />
                </TableRow>
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/components"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/components"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_components"
                            android:textSize="8pt"
                            />
                </TableRow>
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_status"
                            android:textSize="8pt"
                            />
                </TableRow>
                <TableRow
                        android:layout_marginTop="2dp"
                        >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assigner"
                            android:textSize="8pt"
                            />
                    <TextView
                            android:id="@+id/assigner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/dummy_assigner"
                            android:textSize="8pt"
                            />
                </TableRow>
            </TableLayout>

            <!-- 詳細 -->
            <TextView
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:text="@string/dummy_content"
                    android:textSize="8pt"
                    />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>