<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_root"
        >

    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dummy"
            android:contentDescription="@string/icon"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

        <!-- 日時 -->
        <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="right"
                android:text="@string/dummy_time"
                android:textSize="4pt"
                android:textColor="@color/gray"
                />

        <!-- 誰がどうした -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/dummy_user"
                    android:textSize="6pt"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/follow_user"
                    android:textSize="6pt"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/gray"
                    />

            <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/dummy_user"
                    android:textSize="6pt"
                    android:textColor="@color/white"
                    android:background="@color/type_comment"
                    />
        </LinearLayout>

        <!-- 課題 -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:id="@+id/key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_key"
                    android:textSize="6pt"
                    android:textColor="@color/issue_summary"
                    />

            <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/dummy_summary"
                    android:textSize="6pt"
                    />
        </LinearLayout>

        <!-- コメント -->
        <TextView
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp"
                android:text="@string/dummy_content"
                />
    </LinearLayout>
</LinearLayout>