<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_root"
        >

    <!-- 課題 -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_entry_panel"
            >
        <TextView
                android:id="@+id/key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/dummy_key"
                android:textColor="@color/issue_key"
                />
        <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/dummy_summary"
                />
    </LinearLayout>

    <!-- コメント入力欄 -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@color/bg_entry_panel"
            >

        <EditText
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:lines="4"
                android:inputType="textMultiLine"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dummy"
                    android:contentDescription="@string/icon"/>
            <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/send"
                    />
        </LinearLayout>
    </LinearLayout>

    <!-- コメント -->
    <ListView
            android:id="@+id/comments_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
</LinearLayout>